# bullet_stream

./: CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: ci.yml
examples/: style_guide.rs
src/: ansi_escape.rs  lib.rs  style.rs  write.rs
