[package]
name = "bullet_stream"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Bulletproof printing for bullet point text"
keywords = ["script", "buildpack", "output", "printing", "ansi"]
repository = "https://github.com/schneems/bullet_stream"
documentation = "https://docs.rs/bullet_stream"
readme = "README.md"
include = ["src/**/*", "LICENSE", "README.md"]

[dev-dependencies]
fun_run = "0.1.2"
indoc = "2.0.5"
tempfile = "3.10.1"
libcnb-test = "0.21.0"
ascii_table = { version = "4.0.3", features = ["color_codes"] }
